--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstackblog.github.io/How-Smart-Marketing-Strategies-Drive-Business-Success-in-the-Digital-Age/">https://cloudstackblog.github.io/How-Smart-Marketing-Strategies-Drive-Business-Success-in-the-Digital-Age/</a><br>
+                <a target="_bLank" href="https://socialcalicloudstack.s3.us-east-005.backblazeb2.com/How+Smart+Marketing+Strategies+Drive+Business+Success+in+the+Digital+Age/index.html">https://socialcalicloudstack.s3.us-east-005.backblazeb2.com/How+Smart+Marketing+Strategies+Drive+Business+Success+in+the+Digital+Age/index.html</a><br>
+                <a target="_bLank" href="https://how-smart-marketing-strategies-git-f3f836-illuvidatas-projects.vercel.app/">https://how-smart-marketing-strategies-git-f3f836-illuvidatas-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://boisterous-croissant-04d269.netlify.app/">https://boisterous-croissant-04d269.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
